# spooky_connect4

./: Cargo.toml  README.md  pyproject.toml  rust_connect4.pyi  setup.py
src/: board.rs  encode.rs  game.rs  lib.rs  move.rs  outcome.rs  player.rs  serde_support.rs
tests/: test_integration.py
tests/board/: test_board.py
tests/encoding/: test_encoding.py
tests/game/: test_game.py
tests/move/: test_move.py
